--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,9 @@ release
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.pyc
