Add upload function

--- a/package.json
+++ b/package.json
@@ -50,11 +50,14 @@
     "electron-mac-permissions": "^2.2.2"
   },
   "dependencies": {
+    "@types/multer": "^2.0.0",
+    "ali-oss": "^6.23.0",
     "clsx": "^2.1.0",
     "esptool-js": "^0.5.4",
     "i18next": "^25.8.4",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.344.0",
+    "multer": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^16.5.4",
@@ -116,6 +119,14 @@
     ],
     "asar": true,
     "mac": {
+      "protocols": [
+        {
+          "name": "LILYGO Spark Auth",
+          "schemes": [
+            "lilygo-spark"
+          ]
+        }
+      ],
       "extraResources": [
         {
           "from": "resources/tools/mac/esptool-${arch}",
@@ -142,6 +153,14 @@
       "format": "ULFO"
     },
     "win": {
+      "protocols": [
+        {
+          "name": "LILYGO Spark Auth",
+          "schemes": [
+            "lilygo-spark"
+          ]
+        }
+      ],
       "extraResources": [
         {
           "from": "resources/tools/win",
@@ -176,6 +195,14 @@
       "artifactName": "LILYGO-Spark-${version}-windows-${arch}-portable.${ext}"
     },
     "linux": {
+      "protocols": [
+        {
+          "name": "LILYGO Spark Auth",
+          "schemes": [
+            "lilygo-spark"
+          ]
+        }
+      ],
       "extraResources": [
         {
           "from": "resources/tools/linux",
