--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postinstall": "electron-builder install-app-deps",
     "build": "npm run clean && npm run prebuild && npm run build:compile && electron-builder",
     "clean": "rimraf dist dist-electron release",
-    "prebuild": "shx mkdir -p build && shx cp public/LILYGO.png build/icon.png",
+    "prebuild": "node scripts/check-lilygo-config.js && shx mkdir -p build && shx cp public/LILYGO.png build/icon.png",
     "prebuild:mac:all": "npm run prebuild",
     "prebuild:mac": "npm run prebuild",
     "build:compile": "tsc && vite build",
@@ -96,6 +96,7 @@
       "dist/**/*",
       "dist-electron/**/*",
       "package.json",
+      "lilygo_config.json",
       "!**/node_modules/*/{CHANGELOG.md,README.md,README,readme.md,readme}",
       "!**/node_modules/*/{test,__tests__,tests,powered-test,example,examples}",
       "!**/node_modules/*.d.ts",
