--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lilygo-spark",
   "version": "0.1.0",
-  "description": "A cross-platform firmware hub and flasher for LILYGO and other ESP devices",
+  "description": "A cross-platform firmware hub and burner for LILYGO and other ESP devices",
   "main": "dist-electron/main.js",
   "scripts": {
     "dev": "vite",
@@ -38,7 +38,7 @@
   "keywords": [
     "electron",
     "esp32",
-    "flasher",
+    "burner",
     "lilygo"
   ],
   "author": {
@@ -65,8 +65,8 @@
     "spark-md5": "^3.0.2",
     "tailwind-merge": "^2.2.1",
     "web-serial-polyfill": "^1.0.15",
-    "xterm": "^5.3.0",
-    "xterm-addon-fit": "^0.8.0"
+    "@xterm/xterm": "^5.5.0",
+    "@xterm/addon-fit": "^0.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
@@ -75,14 +75,14 @@
     "@types/w3c-web-serial": "^1.0.3",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
-    "electron": "^29.4.6",
-    "electron-builder": "^24.13.3",
+    "electron": "^40.4.0",
+    "electron-builder": "^26.7.0",
     "postcss": "^8.4.35",
     "rimraf": "^6.1.2",
     "shx": "^0.4.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2",
-    "vite": "^5.1.5",
+    "vite": "^7.3.1",
     "vite-plugin-electron": "^0.28.2",
     "vite-plugin-electron-renderer": "^0.14.5"
   },
@@ -137,7 +137,8 @@
       ],
       "category": "public.app-category.developer-tools",
       "extendInfo": {
-        "NSBluetoothAlwaysUsageDescription": "This app uses Bluetooth to find and connect to ESP32 devices."
+        "NSBluetoothAlwaysUsageDescription": "This app uses Bluetooth to find and connect to ESP32 devices.",
+        "CFBundleDisplayName": "LilyGO-Spark"
       },
       "artifactName": "LILYGO-Spark-${version}-macOS-${arch}.${ext}",
       "target": [
