Update electron to 40 and fix styles

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,7 @@
+# 跳过 audit（腾讯云等镜像不支持 advisories 接口，会 404）
+audit=false
+fund=false
+
 # Electron 下载加速（国内镜像，npm install 时生效）
 electron_mirror=https://npmmirror.com/mirrors/electron/
 
