--- a/package.json
+++ b/package.json
@@ -65,8 +65,8 @@
     "spark-md5": "^3.0.2",
     "tailwind-merge": "^2.2.1",
     "web-serial-polyfill": "^1.0.15",
-    "@xterm/xterm": "^5.5.0",
-    "@xterm/addon-fit": "^0.11.0"
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
@@ -75,7 +75,7 @@
     "@types/w3c-web-serial": "^1.0.3",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
-    "electron": "^29.4.6",
+    "electron": "^40.4.0",
     "electron-builder": "^26.7.0",
     "postcss": "^8.4.35",
     "rimraf": "^6.1.2",
