--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^16.5.4",
+    "rss-parser": "^3.13.0",
     "serialport": "^13.0.0",
     "spark-md5": "^3.0.2",
     "tailwind-merge": "^2.2.1",
